--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -46,10 +46,14 @@
           <div class="v1-line"></div>
           <div class="profile-main">
             <div class="profile-main-image">
-              <img src="#" alt="프로필 사진" />
+              <img
+                src="/Wedder-FE/assets/images/Matari.png"
+                alt="프로필 사진"
+              />
             </div>
             <div>
               <div class="profile-name">마타리</div>
+              <div>전화 번호</div>
               <div class="profile-body">
                 <img
                   src="../../assets/images/phone_iphone.png"
@@ -61,8 +65,37 @@
                 <p>-</p>
                 <p></p>
               </div>
+              <div>메일</div>
+              <div class="profile-body">
+                <img src="../../assets/images/mail.png" alt="메일 로고" />
+                <p>matari 4593</p>
+                <p>@</p>
+                <p>naver.com</p>
+              </div>
+              <div>생일</div>
+              <div class="profile-body">
+                <img
+                  src="../../assets/images/cake.png"
+                  alt="생일 케이크 로고"
+                />
+                <p>1997</p>
+                <p>년</p>
+                <p>3</p>
+                <p>월</p>
+                <p>5</p>
+                <p>일</p>
+              </div>
             </div>
           </div>
+        </section>
+
+        <section class="visit-plan">
+          <div class="sub-title">금일 방문 일정</div>
+          <div>금일 일정 <span id="EA">2건</span> 있습니다.</div>
+          <div class="ReservationMange-go">
+            <a href="#">예약 관리 바로가기</a>
+          </div>
+          <div class="v1-line"></div>
         </section>
       </main>
     </div>
