--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -97,6 +97,34 @@
             <a href="#">예약 관리 바로가기</a>
           </div>
           <div class="v1-line"></div>
+          <div>
+            <form action="">
+              <table id="today-vs-plan-table">
+                <thead>
+                  <tr>
+                    <th>스튜디오명</th>
+                    <th>예약자</th>
+                    <th>금일 예약 시간</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>s 스튜디오</td>
+                    <td>정정화</td>
+                    <td>2025-10-19 일요일</td>
+                  </tr>
+                  <tr>
+                    <td>p 스튜디오</td>
+                    <td>이순신</td>
+                    <td>2025-05-05 토요일</td>
+                  </tr>
+                </tbody>
+              </table>
+            </form>
+          </div>
+        </section>
+        <section class="recent-reservation">
+          <div class="v1-line"></div>
           <div class="dropdown">
             <button class="dropbtn">
               <span class="dropbtn_content">Select a menu...</span>
