feat : [FE] 공통 footer, header 완성

--- a/html/main/main.html
+++ b/html/main/main.html
@@ -3,10 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>wedder-main</title>
+        <title>Wedder</title>
         <link rel="stylesheet" href="../../css/common/reset.css" />
-        <link rel="stylesheet" href="../../components/header/header.css" />
-        <link rel="stylesheet" href="../../components/footer/footer.css" />
         <link rel="stylesheet" href="../../css/main/main.css" />
         <script defer src="../../js/main/main.js"></script>
     </head>
