--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="../../components/footer/footer.css" />
     <link rel="stylesheet" href="../../css/mypage/mypage.css" />
     <link rel="stylesheet" href="../../css/main/main.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
     <script defer src="../../js/main/main.js"></script>
     <script defer src="../../js/mypage/mypage.js"></script>
   </head>
@@ -127,7 +137,7 @@
           <div class="v1-line"></div>
           <div class="dropdown">
             <button class="dropbtn">
-              <span class="dropbtn_content">Select a menu...</span>
+              <span class="dropbtn_content">스튜디오...</span>
               <img
                 src="../../assets/images/arrow_drop_down.png"
                 alt="미구현 드랍다운"
@@ -146,6 +156,36 @@
             </div>
           </div>
           <div class="table-divide">
+            <div class="table">
+              <img
+                src="../../assets/images/studioimage.jpg"
+                alt="프로필 이미지"
+              />
+              <div>
+                <div>비슈어 스튜디오</div>
+                <div>서울특별시 서초구 신반포로 41길 7</div>
+              </div>
+              <div>
+                <span class="material-symbols-outlined"> grade </span>
+                <a href="">
+                  <img
+                    class="rate"
+                    src="../../assets/images/rate_review_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png"
+                    alt="댓글 달기"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="table">
+              <img
+                src="../../assets/images/studioimage.jpg"
+                alt="프로필 이미지"
+              />
+              <div>
+                <div>비슈어 스튜디오</div>
+                <div>서울특별시 서초구 신반포로 41길 7</div>
+              </div>
+            </div>
             <div class="table">
               <img
                 src="../../assets/images/studioimage.jpg"
