fix:[FE] setting.json:5500 과 header,footer css 읽지 못함  경로 변경으로 해결

--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>mypage</title>
+    <link rel="stylesheet" href="../../css/common/reset.css" />
+    <link rel="stylesheet" href="../../css/mypage/mypage.css" />
+    <script defer src="/Wedder-FE/js/main/main.js"></script>
+  </head> -->
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mypage</title>
     <link rel="stylesheet" href="../../css/common/reset.css" />
-    <link rel="stylesheet" href="../../components/header/header.css" />
-    <link rel="stylesheet" href="../../components/footer/footer.css" />
     <link rel="stylesheet" href="../../css/mypage/mypage.css" />
     <link rel="stylesheet" href="../../css/main/main.css" />
 
@@ -210,6 +217,6 @@
         </section>
       </main>
     </div>
-    <div id="footer-placeholder"></div>
   </body>
+  <div id="footer-placeholder"></div>
 </html>
