--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -135,7 +135,7 @@
           <div class="v1-line"></div>
           <div class="dropdown">
             <button class="dropbtn">
-              <span class="dropbtn_content">스튜디오...</span>
+              <span class="dropbtn_content">스튜디오</span>
               <img
                 src="../../assets/images/arrow_drop_down.png"
                 alt="미구현 드랍다운"
@@ -163,9 +163,9 @@
                 <div>비슈어 스튜디오</div>
                 <div>서울특별시 서초구 신반포로 41길 7</div>
               </div>
-              <div>
-                <span class="material-symbols-outlined"> grade </span>
-                <a href="">
+              <div class="evaluate-store">
+                <a href="#"><p class="material-symbols-outlined">grade</p></a>
+                <a href="#">
                   <img
                     class="rate"
                     src="../../assets/images/rate_review_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png"
@@ -183,15 +183,15 @@
                 <div>비슈어 스튜디오</div>
                 <div>서울특별시 서초구 신반포로 41길 7</div>
               </div>
-            </div>
-            <div class="table">
-              <img
-                src="../../assets/images/studioimage.jpg"
-                alt="프로필 이미지"
-              />
-              <div>
-                <div>비슈어 스튜디오</div>
-                <div>서울특별시 서초구 신반포로 41길 7</div>
+              <div class="evaluate-store">
+                <a href="#"><p class="material-symbols-outlined">grade</p></a>
+                <a href="#">
+                  <img
+                    class="rate"
+                    src="../../assets/images/rate_review_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png"
+                    alt="댓글 달기"
+                  />
+                </a>
               </div>
             </div>
             <div class="table">
@@ -202,6 +202,36 @@
               <div>
                 <div>비슈어 스튜디오</div>
                 <div>서울특별시 서초구 신반포로 41길 7</div>
+              </div>
+              <div class="evaluate-store">
+                <a href="#"><p class="material-symbols-outlined">grade</p></a>
+                <a href="#">
+                  <img
+                    class="rate"
+                    src="../../assets/images/rate_review_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png"
+                    alt="댓글 달기"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="table">
+              <img
+                src="../../assets/images/studioimage.jpg"
+                alt="프로필 이미지"
+              />
+              <div>
+                <div>비슈어 스튜디오</div>
+                <div>서울특별시 서초구 신반포로 41길 7</div>
+              </div>
+              <div class="evaluate-store">
+                <a href="#"><p class="material-symbols-outlined">grade</p></a>
+                <a href="#">
+                  <img
+                    class="rate"
+                    src="../../assets/images/rate_review_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png"
+                    alt="댓글 달기"
+                  />
+                </a>
               </div>
             </div>
           </div>
