feat : [FE] 스드메  예약페이지 CSS수정

--- a/html/reservation/Reservation-category.html
+++ b/html/reservation/Reservation-category.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wedder-reservation</title>
-    <link rel="stylesheet" href="/Wedder-FE/css/common/reset.css" />
-    <link rel="stylesheet" href="/Wedder-FE/components/header/" />
-    <link rel="stylesheet" href="/Wedder-FE/components/footer/" />
-    <link rel="stylesheet" href="/Wedder-FE-JH/css/Reservation-category.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <title>Wedder-reservation</title>
+    <link rel="stylesheet" href="../../css/common/reset.css" />
+    <link rel="stylesheet" href="../../css/reservation/Reservation-category.css" />
+    <script src="../../js/main/main.js"></script>
 </head>
 <body>
     <div id="header-placeholder"></div>
@@ -43,25 +39,25 @@
         <section class="category-all">
             <div class="category">
                 <a href="#">
-                    <img src="../assets/images/Reservation-CG-Studio.png" alt="Studio">
+                    <img src="../../assets/images/Reservation-CG-Studio.png" alt="Studio">
                     <h3 class="category-text">Studio</h3>  
                 </a>
             </div>
             <div class="category">
                 <a href="#">
-                    <img src="../assets/images/Resevation-CG-Dress.png" alt="Dress">
+                    <img src="../../assets/images/Resevation-CG-Dress.png" alt="Dress">
                     <h3 class="category-text">Dress</h3>   
                 </a>
             </div>
             <div class="category">
                 <a href="#">
-                    <img src="../assets/images/Reservation-CG-Makeup.png" alt="Hair&Makeup">
-                    <h3 class="category-text">Hair & <br>Makeup</h3>
+                    <img src="../../assets/images/Reservation-CG-Makeup.png" alt="Hair&Makeup">
+                    <h3 class="category-text2">Hair & <br>Makeup</h3>
                 </a>   
             </div>
             <div class="category">
                 <a href="#">
-                    <img src="../assets/images/Reservation-CG-Package.png" alt="Package">
+                    <img src="../../assets/images/Reservation-CG-Package.png" alt="Package">
                     <h3 class="category-text">Package</h3>
                 </a>
             </div>
