--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -100,38 +100,27 @@
 
         <section class="visit-plan">
           <div class="sub-title">금일 방문 일정</div>
-          <div>금일 일정 <span id="EA">2건</span> 있습니다.</div>
+          <div>💡️금일 일정 <span id="EA">2건</span> 있습니다.</div>
           <div class="ReservationMange-go">
-            <a href="#">예약 관리 바로가기</a>
+            <a href="#">방문 일정 상세보기</a>
           </div>
           <div class="v1-line"></div>
-          <div>
-            <form action="">
-              <table id="today-vs-plan-table">
-                <thead>
-                  <tr>
-                    <th>스튜디오명</th>
-                    <th>예약자</th>
-                    <th>금일 예약 시간</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>s 스튜디오</td>
-                    <td>정정화</td>
-                    <td>2025-10-19 일요일</td>
-                  </tr>
-                  <tr>
-                    <td>p 스튜디오</td>
-                    <td>이순신</td>
-                    <td>2025-05-05 토요일</td>
-                  </tr>
-                </tbody>
-              </table>
-            </form>
+          <div class="table_VSplan">
+            <div class="row_header">
+              <div class="cell">Name</div>
+              <div class="cell">Age</div>
+              <div class="cell">Occupation</div>
+              <div class="cell">Location</div>
+            </div>
           </div>
         </section>
+        <BR></BR>
         <section class="recent-reservation">
+          <div class="sub-title">현재 예약 현황</div>
+          <div>✅금일 한정 추천 예약  <span id="EA">3건</span> 있습니다.</div>
+          <div class="ReservationMange-go">
+            <a href="#">상세 예약 현황 바로가기</a>
+          </div>
           <div class="v1-line"></div>
           <div class="dropdown">
             <button class="dropbtn">
@@ -236,6 +225,34 @@
             </div>
           </div>
         </section>
+        <section class="Proposal">
+          <div class="sub-title">추천 스튜디오</div>
+          <br>
+          <div>
+            <div class="proposal-card">
+              <img src="../../assets/images/proposal-studio.png" alt="폼 카드 ">
+              <div>더 베네치아</div>
+              <div>서울 특별시 강동구</div>
+            </div>
+            <div class="proposal-card">
+              <img src="../../assets/images/proposal-studio.png" alt="폼 카드 ">
+              <div>더 베네치아</div>
+              <div>서울 특별시 강동구</div>
+            </div>
+            <div class="proposal-card">
+              <img src="../../assets/images/proposal-studio.png" alt="폼 카드 ">
+              <div>더 베네치아</div>
+              <div>서울 특별시 강동구</div>
+            </div>
+            <div class="proposal-card">
+              <img src="../../assets/images/proposal-studio.png" alt="폼 카드 ">
+              <div>더 베네치아</div>
+              <div>서울 특별시 강동구</div>
+            </div>
+            <div></div>
+          </div>
+        </section>
+        <div></div>
       </main>
     </div>
   </body>
