--- a/html/weddingHall/mapViewWithFilters.html
+++ b/html/weddingHall/mapViewWithFilters.html
@@ -5,13 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>mapViewWithList</title>
         <link rel="stylesheet" href="../../css/common/reset.css" />
-        <link rel="stylesheet" href="../../css/weddingHall/mapViewWithFilters.css"/>        
-        <link rel="stylesheet" href="../../css/weddingHall/weddingHallList.css"/>
+        <link
+            rel="stylesheet"
+            href="../../css/weddingHall/mapViewWithFilters.css"
+        />
+        <link
+            rel="stylesheet"
+            href="../../css/weddingHall/weddingHallList.css"
+        />
         <script defer src="../../js/main/main.js"></script>
         <script defer src="../../js/weddingHall/mapViewWithFilters.js"></script>
-
     </head>
-    <body>        
+    <body>
         <div id="header-placeholder"></div>
         <div class="hd__inner1100">
             <!-- 메인 타이틀 문구 -->
@@ -68,7 +73,8 @@
             </section>
 
             <!-- 지도 -->
-            <section class="map"><img src="../../assets/images/map.png" />
+            <section class="map">
+                <img src="../../assets/images/map.png" />
             </section>
 
             <!-- 키워드 검색 -->
@@ -76,28 +82,46 @@
                 <h2>인기 키워드로 보는 웨딩홀</h2>
                 <div class="keyword-container">
                     <ul>
-                        <li><a href="#" data-keyword="popular">🔥 인기많은</a></li>
-                        <li><a href="#" data-keyword="delicious">🍽️ 식사가 맛있는</a></li>
-                        <li><a href="#" data-keyword="outdoor">🌳 야외에서 즐기는</a></li>
-                        <li><a href="#" data-keyword="reviewed">💎 후기많은</a></li>
-                        <li><a href="#" data-keyword="new">🚩 따끈따근한</a></li>
+                        <li>
+                            <a href="#" data-keyword="popular">🔥 인기많은</a>
+                        </li>
+                        <li>
+                            <a href="#" data-keyword="delicious"
+                                >🍽️ 식사가 맛있는</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#" data-keyword="outdoor"
+                                >🌳 야외에서 즐기는</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#" data-keyword="reviewed">💎 후기많은</a>
+                        </li>
+                        <li>
+                            <a href="#" data-keyword="new">🚩 따끈따근한</a>
+                        </li>
                         <li><a href="#" data-keyword="value">💸 가성비</a></li>
                     </ul>
                 </div>
             </section>
 
             <section class="carousel-container hd__inner1100">
-                <button class="carousel-button left" id="prevButton"><img src="../../assets/images/left.png"></button>
+                <button class="carousel-button left" id="prevButton">
+                    <img src="../../assets/images/left.png" />
+                </button>
                 <div class="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item">
                             <div class="carousel-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
-                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식
-                            </h2>
+                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
                             <div class="carousel-item-img">
-                                <img src="../../assets/images/Reservation-CG-Studio.png" alt="웨딩홀 이미지 5">
+                                <img
+                                    src="../../assets/images/Reservation-CG-Studio.png"
+                                    alt="웨딩홀 이미지 5"
+                                />
                             </div>
                             <div class="carousel-item-content">
                                 <h3>추천포인트</h3>
@@ -108,11 +132,13 @@
                         <div class="carousel-item">
                             <div class="carousel-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
-                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식
-                            </h2>
+                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
                             <div class="carousel-item-img">
-                                <img src="../../assets/images/Reservation-CG-Studio.png" alt="웨딩홀 이미지 5">
+                                <img
+                                    src="../../assets/images/Reservation-CG-Studio.png"
+                                    alt="웨딩홀 이미지 5"
+                                />
                             </div>
                             <div class="carousel-item-content">
                                 <h3>추천포인트</h3>
@@ -123,11 +149,13 @@
                         <div class="carousel-item">
                             <div class="carousel-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
-                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식
-                            </h2>
+                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
                             <div class="carousel-item-img">
-                                <img src="../../assets/images/Reservation-CG-Studio.png" alt="웨딩홀 이미지 5">
+                                <img
+                                    src="../../assets/images/Reservation-CG-Studio.png"
+                                    alt="웨딩홀 이미지 5"
+                                />
                             </div>
                             <div class="carousel-item-content">
                                 <h3>추천포인트</h3>
@@ -138,11 +166,13 @@
                         <div class="carousel-item">
                             <div class="carousel-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
-                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식
-                            </h2>
+                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
                             <div class="carousel-item-img">
-                                <img src="../../assets/images/Reservation-CG-Studio.png" alt="웨딩홀 이미지 5">
+                                <img
+                                    src="../../assets/images/Reservation-CG-Studio.png"
+                                    alt="웨딩홀 이미지 5"
+                                />
                             </div>
                             <div class="carousel-item-content">
                                 <h3>추천포인트</h3>
@@ -153,11 +183,13 @@
                         <div class="carousel-item">
                             <div class="carousel-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
-                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식
-                            </h2>
+                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
                             <div class="carousel-item-img">
-                                <img src="../../assets/images/Reservation-CG-Makeup.png" alt="웨딩홀 이미지 5">
+                                <img
+                                    src="../../assets/images/Reservation-CG-Makeup.png"
+                                    alt="웨딩홀 이미지 5"
+                                />
                             </div>
                             <div class="carousel-item-content">
                                 <h3>추천포인트</h3>
@@ -168,11 +200,13 @@
                         <div class="carousel-item">
                             <div class="carousel-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
-                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식
-                            </h2>
+                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
                             <div class="carousel-item-img">
-                                <img src="../../assets/images/Reservation-CG-Makeup.png" alt="웨딩홀 이미지 5">
+                                <img
+                                    src="../../assets/images/Reservation-CG-Makeup.png"
+                                    alt="웨딩홀 이미지 5"
+                                />
                             </div>
                             <div class="carousel-item-content">
                                 <h3>추천포인트</h3>
@@ -183,11 +217,13 @@
                         <div class="carousel-item">
                             <div class="carousel-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
-                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식
-                            </h2>
+                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
                             <div class="carousel-item-img">
-                                <img src="../../assets/images/Reservation-CG-Makeup.png" alt="웨딩홀 이미지 5">
+                                <img
+                                    src="../../assets/images/Reservation-CG-Makeup.png"
+                                    alt="웨딩홀 이미지 5"
+                                />
                             </div>
                             <div class="carousel-item-content">
                                 <h3>추천포인트</h3>
@@ -198,22 +234,27 @@
                         <div class="carousel-item">
                             <div class="carousel-item-title">
                                 <p>도심속 자연과 어우러진 하우스웨딩</p>
-                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식
-                            </h2>
+                                <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
                             <div class="carousel-item-img">
-                                <img src="../../assets/images/Reservation-CG-Makeup.png" alt="웨딩홀 이미지 5">
+                                <img
+                                    src="../../assets/images/Reservation-CG-Makeup.png"
+                                    alt="웨딩홀 이미지 5"
+                                />
                             </div>
                             <div class="carousel-item-content">
                                 <h3>추천포인트</h3>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                                 <p>✔️ 따뜻한 분위기 살라</p>
                             </div>
-                        </div>                        
+                        </div>
                     </div>
-                        </div>
-                        <button class="carousel-button right" id="nextButton"><img src="../../assets/images/right.png"></button>
-                    </section>
-
-        </body>
+                </div>
+                <button class="carousel-button right" id="nextButton">
+                    <img src="../../assets/images/right.png" />
+                </button>
+            </section>
+        </div>
+        <div id="footer-placeholder"></div>
+    </body>
 </html>
