chore : [FE] 프로젝트 전반 css 스타일 추가 수정

--- a/html/weddingHall/mapViewWithFilters.html
+++ b/html/weddingHall/mapViewWithFilters.html
@@ -21,10 +21,10 @@
         <div class="hd__inner1100">
             <!-- 메인 타이틀 문구 -->
             <section class="title">
-                <div class="sub-title">
+                <div class="title-sub">
                     원하는 조건으로 나만의 웨딩홀 장소를 찾아보세요.
                 </div>
-                <div class="main-title">Wedding Hall</div>
+                <div class="title-main">Wedding Hall</div>
             </section>
 
             <!-- 검색 조건 및 버튼 -->
@@ -67,8 +67,14 @@
                     </div>
                 </div>
                 <div class="search-btn">
-                    <span class="list-search-btn dark-pink">목록으로 보기</span>
-                    <span class="map-search-btn">지도로 보기</span>
+                    <button class="list-search-btn dark-pink">
+                        목록으로 보기
+                    </button>
+                    <button class="map-search-btn">
+                        <a href="../../html/weddingHall/mapViewWithFilters.html"
+                            >지도로 보기</a
+                        >
+                    </button>
                 </div>
             </section>
 
