feat: [FE] 이미지 크기 및 비율 조정

--- a/html/weddingHall/weddingHallList.html
+++ b/html/weddingHall/weddingHallList.html
@@ -4,9 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Wedder</title>
-        <link rel="stylesheet" href="/css/common/reset.css" />
-        <link rel="stylesheet" href="/css/weddingHall/weddingHallList.css" />
-        <script defer src="/js/main/main.js"></script>
+        <link rel="stylesheet" href="../../css/common/reset.css" />
+        <link
+            rel="stylesheet"
+            href="../../css/weddingHall/weddingHallList.css"
+        />
+        <script defer src="../../js/main/main.js"></script>
     </head>
     <body>
         <div id="header-placeholder"></div>
@@ -69,7 +72,7 @@
                 <div class="card" data-id="1">
                     <a href="#">
                         <img
-                            src="../../assets/images/weddinghall1.jpg"
+                            src="../../assets/images/weddinghall3.jpg"
                             alt="웨딩홀 이미지1"
                         />
                     </a>
@@ -131,7 +134,7 @@
                 <div class="card" data-id="1">
                     <a href="#">
                         <img
-                            src="../../assets/images/weddinghall1.jpg"
+                            src="../../assets/images/weddinghall4.jpg"
                             alt="웨딩홀 이미지1"
                         />
                     </a>
@@ -162,69 +165,7 @@
                 <div class="card" data-id="1">
                     <a href="#">
                         <img
-                            src="../../assets/images/weddinghall2.jpg"
-                            alt="웨딩홀 이미지1"
-                        />
-                    </a>
-                    <div class="card-info">
-                        <div class="weddinghall-name">웨딩홀 이름1</div>
-                        <div class="weddinghall-address">주소1</div>
-                        <div class="meal-price">식사비: 0원</div>
-                        <div class="minimum-guarantee">최소 보증: 0명</div>
-                        <div class="budget">200명 기준 예산: 0원</div>
-                        <div class="like-and-score">
-                            <a href="#">
-                                <img
-                                    src="../../assets/images/heart-bold.png"
-                                    alt="하트 이미지"
-                                />
-                                <span>12,000</span>
-                            </a>
-                            <a href="#">
-                                <img
-                                    src="../../assets/images/star-1.png"
-                                    alt="하트 이미지"
-                                />
-                                <span>460</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card" data-id="1">
-                    <a href="#">
-                        <img
-                            src="../../assets/images/weddinghall2.jpg"
-                            alt="웨딩홀 이미지1"
-                        />
-                    </a>
-                    <div class="card-info">
-                        <div class="weddinghall-name">웨딩홀 이름1</div>
-                        <div class="weddinghall-address">주소1</div>
-                        <div class="meal-price">식사비: 0원</div>
-                        <div class="minimum-guarantee">최소 보증: 0명</div>
-                        <div class="budget">200명 기준 예산: 0원</div>
-                        <div class="like-and-score">
-                            <a href="#">
-                                <img
-                                    src="../../assets/images/heart-bold.png"
-                                    alt="하트 이미지"
-                                />
-                                <span>12,000</span>
-                            </a>
-                            <a href="#">
-                                <img
-                                    src="../../assets/images/star-1.png"
-                                    alt="하트 이미지"
-                                />
-                                <span>460</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card" data-id="1">
-                    <a href="#">
-                        <img
-                            src="../../assets/images/weddinghall2.jpg"
+                            src="../../assets/images/weddinghall3.jpg"
                             alt="웨딩홀 이미지1"
                         />
                     </a>
@@ -317,7 +258,69 @@
                 <div class="card" data-id="1">
                     <a href="#">
                         <img
-                            src="../../assets/images/weddinghall2.jpg"
+                            src="../../assets/images/weddinghall3.jpg"
+                            alt="웨딩홀 이미지1"
+                        />
+                    </a>
+                    <div class="card-info">
+                        <div class="weddinghall-name">웨딩홀 이름1</div>
+                        <div class="weddinghall-address">주소1</div>
+                        <div class="meal-price">식사비: 0원</div>
+                        <div class="minimum-guarantee">최소 보증: 0명</div>
+                        <div class="budget">200명 기준 예산: 0원</div>
+                        <div class="like-and-score">
+                            <a href="#">
+                                <img
+                                    src="../../assets/images/heart-bold.png"
+                                    alt="하트 이미지"
+                                />
+                                <span>12,000</span>
+                            </a>
+                            <a href="#">
+                                <img
+                                    src="../../assets/images/star-1.png"
+                                    alt="하트 이미지"
+                                />
+                                <span>460</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" data-id="1">
+                    <a href="#">
+                        <img
+                            src="../../assets/images/weddinghall4.jpg"
+                            alt="웨딩홀 이미지1"
+                        />
+                    </a>
+                    <div class="card-info">
+                        <div class="weddinghall-name">웨딩홀 이름1</div>
+                        <div class="weddinghall-address">주소1</div>
+                        <div class="meal-price">식사비: 0원</div>
+                        <div class="minimum-guarantee">최소 보증: 0명</div>
+                        <div class="budget">200명 기준 예산: 0원</div>
+                        <div class="like-and-score">
+                            <a href="#">
+                                <img
+                                    src="../../assets/images/heart-bold.png"
+                                    alt="하트 이미지"
+                                />
+                                <span>12,000</span>
+                            </a>
+                            <a href="#">
+                                <img
+                                    src="../../assets/images/star-1.png"
+                                    alt="하트 이미지"
+                                />
+                                <span>460</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" data-id="1">
+                    <a href="#">
+                        <img
+                            src="../../assets/images/weddinghall4.jpg"
                             alt="웨딩홀 이미지1"
                         />
                     </a>
