feat:[FE] Create proposal-card minus pagination

--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -228,7 +228,7 @@
         <section class="Proposal">
           <div class="sub-title">추천 스튜디오</div>
           <br>
-          <div>
+          <div class="proposal-cardpackage">
             <div class="proposal-card">
               <img src="../../assets/images/proposal-studio.png" alt="폼 카드 ">
               <div>더 베네치아</div>
@@ -249,7 +249,9 @@
               <div>더 베네치아</div>
               <div>서울 특별시 강동구</div>
             </div>
-            <div></div>
+          </div>
+          <div class="pagination">
+            
           </div>
         </section>
         <div></div>
