--- a/html/weddingHall/weddingHallList.html
+++ b/html/weddingHall/weddingHallList.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wedder</title>
-    <link rel="stylesheet" href="/css/common/reset.css" />
-    <link rel="stylesheet" href="/css/weddingHall/weddingHallList.css" />
-    <script defer src="/js/main/main.js"></script>
+    <link rel="stylesheet" href="../../css/common/reset.css" />
+    <link rel="stylesheet" href="../../css/weddingHall/weddingHallList.css" />
+    <script defer src="../../js/main/main.js"></script>
   </head>
   <body>
     <div id="header-placeholder"></div>
