feat: [FE] 이미지 URL을 AWS S3 주소로 변경

--- a/html/calculator/quoteCal.html
+++ b/html/calculator/quoteCal.html
@@ -11,7 +11,7 @@
             padding: 150px;
         }
         .header {
-            background-image: url(img/2026.png);
+            background-image: url(https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/banner-calc.png);
             padding: 30px 0px 30px 10px;
             text-align: left;
         }
@@ -172,7 +172,7 @@
         <div class="items">
             <div class="item">
                 <div class="image">
-                    <img src="img/thumbnail.PNG" alt="Wedding Photo" width="100">
+                    <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
                 </div>
                 <div class="details">
                     <div class="title">S 스튜디오</div>
@@ -182,7 +182,7 @@
             </div>
             <div class="item highlight">
                 <div class="image">
-                    <img src="img/thumbnail.PNG" alt="Wedding Photo" width="100">
+                    <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png" alt="Wedding Photo" width="100">
                 </div>
                 <div class="details">
                     <div class="title">S 스튜디오</div>
@@ -192,7 +192,7 @@
             </div>
             <div class="item">
                 <div class="image">
-                    <img src="img/thumbnail.PNG" alt="Wedding Photo" width="100">
+                    <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
                 </div>
                 <div class="details">
                     <div class="title">S 스튜디오</div>
@@ -207,7 +207,7 @@
                 <h2>선택하신 목록</h2>
                 <div class="item">
                     <div class="image">
-                        <img src="img/thumbnail.PNG" alt="Wedding Photo" width="100">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
                     </div>
                     <div class="details">
                         <div class="title">S 스튜디오</div>
