--- a/html/Package/packageMain.html
+++ b/html/Package/packageMain.html
@@ -1,191 +1,215 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웨딩 패키지</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-        }
-        .banner {
-            display: i;
-            background-color: #F2DCE7;
-            padding: 100px;
-            text-align: left;
-        }
-        .banner h1 {
-            margin: 0;
-            font-size: 24px;
-            color: #333;
-        }
-        .banner p {
-            margin: 5px 0 20px;
-            color: #666;
-        }
-        .banner gift {
-            width: 50px;
-            float: right;
-        }
-        .banner coin {
-            width: 50px;
-            float: right;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .recommendations {
-            display: flex;
-            justify-content: space-around;
-            margin-bottom: 40px;
-        }
-        .recommendation {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            padding: 20px;
-            width: 23%;
-            text-align: center;
-        }
-        .recommendation h2 {
-            font-size: 18px;
-            color: #333;
-        }
-        .recommendation p {
-            color: #666;
-        }
-        .steps {
-            display: flex;
-            justify-content: space-around;
-            margin-bottom: 40px;
-        }
-        .step {
-            text-align: center;
-            width: 23%;
-        }
-        .step img {
-            width: 50px;
-            margin-bottom: 10px;
-        }
-        .packages {
-            text-align: center;
-        }
-        .packages h2 {
-            font-size: 24px;
-            color: #333;
-            margin-bottom: 20px;
-        }
-        .package-list {
-            display: flex;
-            justify-content: space-around;
-        }
-        .package {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            padding: 20px;
-            width: 30%;
-            text-align: center;
-        }
-        .package img {
-            width: 100%;
-            border-radius: 8px;
-            margin-bottom: 10px;
-        }
-        .package h3 {
-            font-size: 18px;
-            color: #333;
-        }
-        .package p {
-            color: #666;
-        }
-    </style>
-</head>
-<body>
-    <div class="banner">
-        <div class="content">
-            <div class="paragraph">
-                <h1>웨딩 카페보다 웨딩 박람회보다 더 싸게 결혼준비를 할 수 있어요.</h1>
-                <div class="par1">
-                    <p>'스드메 상품'은 어디서 계약하시더라도 동일한 구성입니다.</p>
-                    <p>단지 '플래너 수수료'를 얼마나 책정하느냐에 따라 소비자 가격이 달라질 뿐이죠.</p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>웨딩 패키지</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+                background-color: #f9f9f9;
+            }
+            .banner {
+                display: i;
+                background-color: #f2dce7;
+                padding: 100px;
+                text-align: left;
+            }
+            .banner h1 {
+                margin: 0;
+                font-size: 24px;
+                color: #333;
+            }
+            .banner p {
+                margin: 5px 0 20px;
+                color: #666;
+            }
+            .banner gift {
+                width: 50px;
+                float: right;
+            }
+            .banner coin {
+                width: 50px;
+                float: right;
+            }
+            .container {
+                max-width: 1200px;
+                margin: 0 auto;
+                padding: 20px;
+            }
+            .recommendations {
+                display: flex;
+                justify-content: space-around;
+                margin-bottom: 40px;
+            }
+            .recommendation {
+                background-color: #fff;
+                border-radius: 8px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                padding: 20px;
+                width: 23%;
+                text-align: center;
+            }
+            .recommendation h2 {
+                font-size: 18px;
+                color: #333;
+            }
+            .recommendation p {
+                color: #666;
+            }
+            .steps {
+                display: flex;
+                justify-content: space-around;
+                margin-bottom: 40px;
+            }
+            .step {
+                text-align: center;
+                width: 23%;
+            }
+            .step img {
+                width: 50px;
+                margin-bottom: 10px;
+            }
+            .packages {
+                text-align: center;
+            }
+            .packages h2 {
+                font-size: 24px;
+                color: #333;
+                margin-bottom: 20px;
+            }
+            .package-list {
+                display: flex;
+                justify-content: space-around;
+            }
+            .package {
+                background-color: #fff;
+                border-radius: 8px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                padding: 20px;
+                width: 30%;
+                text-align: center;
+            }
+            .package img {
+                width: 100%;
+                border-radius: 8px;
+                margin-bottom: 10px;
+            }
+            .package h3 {
+                font-size: 18px;
+                color: #333;
+            }
+            .package p {
+                color: #666;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="banner">
+            <div class="content">
+                <div class="paragraph">
+                    <h1>
+                        웨딩 카페보다 웨딩 박람회보다 더 싸게 결혼준비를 할 수
+                        있어요.
+                    </h1>
+                    <div class="par1">
+                        <p>
+                            '스드메 상품'은 어디서 계약하시더라도 동일한
+                            구성입니다.
+                        </p>
+                        <p>
+                            단지 '플래너 수수료'를 얼마나 책정하느냐에 따라
+                            소비자 가격이 달라질 뿐이죠.
+                        </p>
+                    </div>
+                    <div class="par2">
+                        <p>
+                            wedder는 기존 '웨딩플래너 역할'은 그대로
+                            제공해드리면서
+                        </p>
+                        <p>투명한 정찰제로 업계 최저가격을 선보입니다.</p>
+                    </div>
+                    <div class="par3">
+                        <p>
+                            이제 결혼준비 시장도 투명하게 바뀔 때가 되지
+                            않았나요? Wedder가 앞장섭니다!
+                        </p>
+                    </div>
                 </div>
-                <div class="par2">
-                    <p>wedder는 기존 '웨딩플래너 역할'은 그대로 제공해드리면서</p>
-                <p>투명한 정찰제로 업계 최저가격을 선보입니다.</p>
-                </div>
-                <div class="par3">
-                    <p>이제 결혼준비 시장도 투명하게 바뀔 때가 되지 않았나요? Wedder가 앞장섭니다!</p>
-                </div>
-            </div>
-            <div class="icon">
-                <img class="gift" src="img/gift.png">
-                <img class="coin" src="img/coin.png">
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="recommendations">
-            <div class="recommendation">
-                <h2>합리적인 가격</h2>
-                <p>웨딩 패키지를 저렴한 가격에 제공합니다.</p>
-            </div>
-            <div class="recommendation">
-                <h2>맞춤형 서비스</h2>
-                <p>신랑신부님 맞춤형 서비스를 제공해 드립니다.</p>
-            </div>
-            <div class="recommendation">
-                <h2>편리성</h2>
-                <p>한번에 여러 준비를 간편하게 끝낼 수 있습니다.</p>
-            </div>
-            <div class="recommendation">
-                <h2>프리미엄 패키지</h2>
-                <p>고급스러운 웨딩을 원하시는 분들을 위한 패키지도 있습니다.</p>
-            </div>
-        </div>
-        <div class="steps">
-            <div class="step">
-                <img src="step1.png" alt="Step 1">
-                <p>1. 입장</p>
-            </div>
-            <div class="step">
-                <img src="step2.png" alt="Step 2">
-                <p>2. 스마트 확인</p>
-            </div>
-            <div class="step">
-                <img src="step3.png" alt="Step 3">
-                <p>3. 결제하기</p>
-            </div>
-            <div class="step">
-                <img src="step4.png" alt="Step 4">
-                <p>4. 서비스 이용</p>
-            </div>
-        </div>
-        <div class="packages">
-            <h2>Best Package</h2>
-            <div class="package-list">
-                <div class="package">
-                    <img src="package1.png" alt="Package 1">
-                    <h3>패키지 1: 웨딩촬영</h3>
-                    <p>포함: 드레스, 메이크업, 스튜디오</p>
-                </div>
-                <div class="package">
-                    <img src="package2.png" alt="Package 2">
-                    <h3>패키지 2: 웨딩홀</h3>
-                    <p>포함: 웨딩홀 대여, 장식, 케이터링</p>
-                </div>
-                <div class="package">
-                    <img src="package3.png" alt="Package 3">
-                    <h3>패키지 3: 허니문</h3>
-                    <p>포함: 항공권, 호텔, 투어</p>
+                <div class="icon">
+                    <img
+                        class="gift"
+                        src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/gift.png"
+                    />
+                    <img
+                        class="coin"
+                        src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/coin.png"
+                    />
                 </div>
             </div>
         </div>
-    </div>
-</body>
+        <div class="container">
+            <div class="recommendations">
+                <div class="recommendation">
+                    <h2>합리적인 가격</h2>
+                    <p>웨딩 패키지를 저렴한 가격에 제공합니다.</p>
+                </div>
+                <div class="recommendation">
+                    <h2>맞춤형 서비스</h2>
+                    <p>신랑신부님 맞춤형 서비스를 제공해 드립니다.</p>
+                </div>
+                <div class="recommendation">
+                    <h2>편리성</h2>
+                    <p>한번에 여러 준비를 간편하게 끝낼 수 있습니다.</p>
+                </div>
+                <div class="recommendation">
+                    <h2>프리미엄 패키지</h2>
+                    <p>
+                        고급스러운 웨딩을 원하시는 분들을 위한 패키지도
+                        있습니다.
+                    </p>
+                </div>
+            </div>
+            <div class="steps">
+                <div class="step">
+                    <img src="step1.png" alt="Step 1" />
+                    <p>1. 입장</p>
+                </div>
+                <div class="step">
+                    <img src="step2.png" alt="Step 2" />
+                    <p>2. 스마트 확인</p>
+                </div>
+                <div class="step">
+                    <img src="step3.png" alt="Step 3" />
+                    <p>3. 결제하기</p>
+                </div>
+                <div class="step">
+                    <img src="step4.png" alt="Step 4" />
+                    <p>4. 서비스 이용</p>
+                </div>
+            </div>
+            <div class="packages">
+                <h2>Best Package</h2>
+                <div class="package-list">
+                    <div class="package">
+                        <img src="package1.png" alt="Package 1" />
+                        <h3>패키지 1: 웨딩촬영</h3>
+                        <p>포함: 드레스, 메이크업, 스튜디오</p>
+                    </div>
+                    <div class="package">
+                        <img src="package2.png" alt="Package 2" />
+                        <h3>패키지 2: 웨딩홀</h3>
+                        <p>포함: 웨딩홀 대여, 장식, 케이터링</p>
+                    </div>
+                    <div class="package">
+                        <img src="package3.png" alt="Package 3" />
+                        <h3>패키지 3: 허니문</h3>
+                        <p>포함: 항공권, 호텔, 투어</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
