--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -1,213 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mypage</title>
-    <link rel="stylesheet" href="../../css/common/reset.css" />
-    <link rel="stylesheet" href="../../css/mypage/mypage.css" />
-    <link rel="stylesheet" href="../../css/main/main.css" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>mypage</title>
+        <link rel="stylesheet" href="../../css/common/reset.css" />
+        <link rel="stylesheet" href="../../css/mypage/mypage.css" />
+        <link rel="stylesheet" href="../../css/main/main.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+        />
 
-    <script defer src="../../js/main/main.js"></script>
-    <script defer src="../../js/mypage/mypage.js"></script>
-  </head>
-  <body>
-    <div id="header-placeholder"></div>
-    <div class="hd__inner1100">
-      <section class="body-header">
-        <div class="divide">
-          <div class="body-header-main">
-            <p>안녕하십니까 순두부님</p>
-            <p>친절한 플랫폼 Wedder입니다.</p>
-          </div>
-          <div>
-            <div class="body-header-footer">
-              <div class="v-line"></div>
-              <div>
-                <p>현재 예약 현황</p>
-                <p>3건</p>
-              </div>
-              <div class="v-line"></div>
-              <div>
-                <p>금일 방문 일정</p>
-                <p>2건</p>
-              </div>
-            </div>
-          </div>
+        <script defer src="../../js/main/main.js"></script>
+        <script defer src="../../js/mypage/mypage.js"></script>
+    </head>
+    <body>
+        <div id="header-placeholder"></div>
+        <div class="hd__inner1100">
+            <section class="body-header">
+                <div class="divide">
+                    <div class="body-header-main">
+                        <p>안녕하십니까 순두부님</p>
+                        <p>친절한 플랫폼 Wedder입니다.</p>
+                    </div>
+                    <div>
+                        <div class="body-header-footer">
+                            <div class="v-line"></div>
+                            <div>
+                                <p>현재 예약 현황</p>
+                                <p>3건</p>
+                            </div>
+                            <div class="v-line"></div>
+                            <div>
+                                <p>금일 방문 일정</p>
+                                <p>2건</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <main>
+                <!-- 프로필 정보 -->
+                <section class="profile">
+                    <div class="sub-title">나의 프로필 정보</div>
+                    <div class="out">
+                        <a href="#">회원 탈퇴</a>
+                    </div>
+                    <div class="v1-line"></div>
+                    <div class="profile-main">
+                        <div class="profile-main-image">
+                            <img
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/person/woman1.png"
+                                alt="프로필 사진"
+                            />
+                        </div>
+                        <div>
+                            <div class="profile-name">마타리</div>
+                            <div>전화 번호</div>
+                            <div class="profile-body">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/phone.png"
+                                    alt="휴대폰 로고"
+                                />
+                                <p>010</p>
+                                <p>-</p>
+                                <p></p>
+                                <p>-</p>
+                                <p></p>
+                            </div>
+                            <div>메일</div>
+                            <div class="profile-body">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/mail.png"
+                                    alt="메일 로고"
+                                />
+                                <p>matari 4593</p>
+                                <p>@</p>
+                                <p>naver.com</p>
+                            </div>
+                            <div>생일</div>
+                            <div class="profile-body">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/cake.png"
+                                    alt="생일 케이크 로고"
+                                />
+                                <p>1997</p>
+                                <p>년</p>
+                                <p>3</p>
+                                <p>월</p>
+                                <p>5</p>
+                                <p>일</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="visit-plan">
+                    <div class="sub-title">금일 방문 일정</div>
+                    <div>금일 일정 <span id="EA">2건</span> 있습니다.</div>
+                    <div class="ReservationMange-go">
+                        <a href="#">예약 관리 바로가기</a>
+                    </div>
+                    <div class="v1-line"></div>
+                    <div>
+                        <form action="">
+                            <table id="today-vs-plan-table">
+                                <thead>
+                                    <tr>
+                                        <th>스튜디오명</th>
+                                        <th>예약자</th>
+                                        <th>금일 예약 시간</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>s 스튜디오</td>
+                                        <td>정정화</td>
+                                        <td>2025-10-19 일요일</td>
+                                    </tr>
+                                    <tr>
+                                        <td>p 스튜디오</td>
+                                        <td>이순신</td>
+                                        <td>2025-05-05 토요일</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </form>
+                    </div>
+                </section>
+                <section class="recent-reservation">
+                    <div class="v1-line"></div>
+                    <div class="dropdown">
+                        <button class="dropbtn">
+                            <span class="dropbtn_content">스튜디오...</span>
+                            <img
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/arrow/drop-down-arrow.png"
+                                alt="미구현 드랍다운"
+                            />
+                        </button>
+                        <div class="dropdown-content">
+                            <div
+                                class="fastfood"
+                                onclick="showMenu(this.innerText)"
+                            >
+                                Burgerking
+                            </div>
+                            <div
+                                class="fastfood"
+                                onclick="showMenu(this.innerText)"
+                            >
+                                Mcdonals
+                            </div>
+                            <div
+                                class="fastfood"
+                                onclick="showMenu(this.innerText)"
+                            >
+                                Lotteria
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table-divide">
+                        <div class="table">
+                            <img
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                                alt="프로필 이미지"
+                            />
+                            <div>
+                                <div>비슈어 스튜디오</div>
+                                <div>서울특별시 서초구 신반포로 41길 7</div>
+                            </div>
+                            <div>
+                                <span class="material-symbols-outlined">
+                                    grade
+                                </span>
+                                <a href="">
+                                    <img
+                                        class="rate"
+                                        src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/review.png"
+                                        alt="댓글 달기"
+                                    />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="table">
+                            <img
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png"
+                                alt="프로필 이미지"
+                            />
+                            <div>
+                                <div>비슈어 스튜디오</div>
+                                <div>서울특별시 서초구 신반포로 41길 7</div>
+                            </div>
+                        </div>
+                        <div class="table">
+                            <img
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/Reservation-CG-Studio.png"
+                                alt="프로필 이미지"
+                            />
+                            <div>
+                                <div>비슈어 스튜디오</div>
+                                <div>서울특별시 서초구 신반포로 41길 7</div>
+                            </div>
+                        </div>
+                        <div class="table">
+                            <img
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                                alt="프로필 이미지"
+                            />
+                            <div>
+                                <div>비슈어 스튜디오</div>
+                                <div>서울특별시 서초구 신반포로 41길 7</div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </main>
         </div>
-      </section>
-      <main>
-        <!-- 프로필 정보 -->
-        <section class="profile">
-          <div class="sub-title">나의 프로필 정보</div>
-          <div class="out">
-            <a href="#">회원 탈퇴</a>
-          </div>
-          <div class="v1-line"></div>
-          <div class="profile-main">
-            <div class="profile-main-image">
-              <img
-                src="/Wedder-FE/assets/images/Matari.png"
-                alt="프로필 사진"
-              />
-            </div>
-            <div>
-              <div class="profile-name">마타리</div>
-              <div>전화 번호</div>
-              <div class="profile-body">
-                <img
-                  src="../../assets/images/phone_iphone.png"
-                  alt="휴대폰 로고"
-                />
-                <p>010</p>
-                <p>-</p>
-                <p></p>
-                <p>-</p>
-                <p></p>
-              </div>
-              <div>메일</div>
-              <div class="profile-body">
-                <img src="../../assets/images/mail.png" alt="메일 로고" />
-                <p>matari 4593</p>
-                <p>@</p>
-                <p>naver.com</p>
-              </div>
-              <div>생일</div>
-              <div class="profile-body">
-                <img
-                  src="../../assets/images/cake.png"
-                  alt="생일 케이크 로고"
-                />
-                <p>1997</p>
-                <p>년</p>
-                <p>3</p>
-                <p>월</p>
-                <p>5</p>
-                <p>일</p>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="visit-plan">
-          <div class="sub-title">금일 방문 일정</div>
-          <div>금일 일정 <span id="EA">2건</span> 있습니다.</div>
-          <div class="ReservationMange-go">
-            <a href="#">예약 관리 바로가기</a>
-          </div>
-          <div class="v1-line"></div>
-          <div>
-            <form action="">
-              <table id="today-vs-plan-table">
-                <thead>
-                  <tr>
-                    <th>스튜디오명</th>
-                    <th>예약자</th>
-                    <th>금일 예약 시간</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>s 스튜디오</td>
-                    <td>정정화</td>
-                    <td>2025-10-19 일요일</td>
-                  </tr>
-                  <tr>
-                    <td>p 스튜디오</td>
-                    <td>이순신</td>
-                    <td>2025-05-05 토요일</td>
-                  </tr>
-                </tbody>
-              </table>
-            </form>
-          </div>
-        </section>
-        <section class="recent-reservation">
-          <div class="v1-line"></div>
-          <div class="dropdown">
-            <button class="dropbtn">
-              <span class="dropbtn_content">스튜디오...</span>
-              <img
-                src="../../assets/images/arrow_drop_down.png"
-                alt="미구현 드랍다운"
-              />
-            </button>
-            <div class="dropdown-content">
-              <div class="fastfood" onclick="showMenu(this.innerText)">
-                Burgerking
-              </div>
-              <div class="fastfood" onclick="showMenu(this.innerText)">
-                Mcdonals
-              </div>
-              <div class="fastfood" onclick="showMenu(this.innerText)">
-                Lotteria
-              </div>
-            </div>
-          </div>
-          <div class="table-divide">
-            <div class="table">
-              <img
-                src="../../assets/images/studioimage.jpg"
-                alt="프로필 이미지"
-              />
-              <div>
-                <div>비슈어 스튜디오</div>
-                <div>서울특별시 서초구 신반포로 41길 7</div>
-              </div>
-              <div>
-                <span class="material-symbols-outlined"> grade </span>
-                <a href="">
-                  <img
-                    class="rate"
-                    src="../../assets/images/rate_review_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png"
-                    alt="댓글 달기"
-                  />
-                </a>
-              </div>
-            </div>
-            <div class="table">
-              <img
-                src="../../assets/images/studioimage.jpg"
-                alt="프로필 이미지"
-              />
-              <div>
-                <div>비슈어 스튜디오</div>
-                <div>서울특별시 서초구 신반포로 41길 7</div>
-              </div>
-            </div>
-            <div class="table">
-              <img
-                src="../../assets/images/studioimage.jpg"
-                alt="프로필 이미지"
-              />
-              <div>
-                <div>비슈어 스튜디오</div>
-                <div>서울특별시 서초구 신반포로 41길 7</div>
-              </div>
-            </div>
-            <div class="table">
-              <img
-                src="../../assets/images/studioimage.jpg"
-                alt="프로필 이미지"
-              />
-              <div>
-                <div>비슈어 스튜디오</div>
-                <div>서울특별시 서초구 신반포로 41길 7</div>
-              </div>
-            </div>
-          </div>
-        </section>
-      </main>
-    </div>
-  </body>
-  <div id="footer-placeholder"></div>
+    </body>
+    <div id="footer-placeholder"></div>
 </html>
