--- a/html/reservation/reservationCategory.html
+++ b/html/reservation/reservationCategory.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../../css/common/reset.css" />
         <link
             rel="stylesheet"
-            href="../../css/reservation/Reservation-category.css"
+            href="../../css/reservation/reservationCategory.css"
         />
         <script src="../../js/main/main.js"></script>
     </head>
@@ -45,7 +45,7 @@
                 <div class="category">
                     <a href="#">
                         <img
-                            src="../../assets/images/Reservation-CG-Studio.png"
+                            src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/Reservation-CG-Studio.png"
                             alt="Studio"
                         />
                         <h3 class="category-text">Studio</h3>
@@ -54,7 +54,7 @@
                 <div class="category">
                     <a href="#">
                         <img
-                            src="../../assets/images/Resevation-CG-Dress.png"
+                            src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/Resevation-CG-Dress.png"
                             alt="Dress"
                         />
                         <h3 class="category-text">Dress</h3>
@@ -63,7 +63,7 @@
                 <div class="category">
                     <a href="#">
                         <img
-                            src="../../assets/images/Reservation-CG-Makeup.png"
+                            src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/Reservation-CG-Makeup.png"
                             alt="Hair&Makeup"
                         />
                         <h3 class="category-text2">Hair & <br />Makeup</h3>
@@ -72,7 +72,7 @@
                 <div class="category">
                     <a href="#">
                         <img
-                            src="../../assets/images/Reservation-CG-Package.png"
+                            src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/Reservation-CG-Package.png"
                             alt="Package"
                         />
                         <h3 class="category-text">Package</h3>
