--- a/html/weddingHall/mapViewWithFilters.html
+++ b/html/weddingHall/mapViewWithFilters.html
@@ -34,41 +34,43 @@
                         <span
                             >지역<img
                                 id="region-icon"
-                                src="../../assets/images/down-arrow.png"
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/down-arrow.png"
                         /></span>
                     </div>
                     <div>
                         <span
                             >날짜<img
                                 id="date-icon"
-                                src="../../assets/images/down-arrow.png"
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/down-arrow.png"
                         /></span>
                     </div>
                     <div>
                         <span
                             >예산<img
                                 id="cost-icon"
-                                src="../../assets/images/down-arrow.png"
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/down-arrow.png"
                         /></span>
                     </div>
                     <div>
                         <span
                             >분위기<img
                                 id="mood-icon"
-                                src="../../assets/images/down-arrow.png"
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/down-arrow.png"
                         /></span>
                     </div>
                     <div>
                         <span
                             >업체명으로 검색<img
                                 id="company-icon"
-                                src="../../assets/images/search-icon.png"
+                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/search-icon.png"
                         /></span>
                     </div>
                 </div>
                 <div class="search-btn">
                     <button class="list-search-btn dark-pink">
-                        목록으로 보기
+                        <a href="../../html/weddingHall/weddingHallList.html"
+                            >목록으로 보기</a
+                        >
                     </button>
                     <button class="map-search-btn">
                         <a href="../../html/weddingHall/mapViewWithFilters.html"
@@ -80,7 +82,9 @@
 
             <!-- 지도 -->
             <section class="map">
-                <img src="../../assets/images/map.png" />
+                <img
+                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/etc/map.png"
+                />
             </section>
 
             <!-- 키워드 검색 -->
@@ -114,7 +118,9 @@
 
             <section class="carousel-container hd__inner1100">
                 <button class="carousel-button left" id="prevButton">
-                    <img src="../../assets/images/left.png" />
+                    <img
+                        src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/arrow/left-arrow.png"
+                    />
                 </button>
                 <div class="carousel">
                     <div class="carousel-inner">
@@ -125,7 +131,7 @@
                             </div>
                             <div class="carousel-item-img">
                                 <img
-                                    src="../../assets/images/Reservation-CG-Studio.png"
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
@@ -142,7 +148,7 @@
                             </div>
                             <div class="carousel-item-img">
                                 <img
-                                    src="../../assets/images/Reservation-CG-Studio.png"
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall2.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
@@ -159,7 +165,7 @@
                             </div>
                             <div class="carousel-item-img">
                                 <img
-                                    src="../../assets/images/Reservation-CG-Studio.png"
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall3.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
@@ -176,7 +182,7 @@
                             </div>
                             <div class="carousel-item-img">
                                 <img
-                                    src="../../assets/images/Reservation-CG-Studio.png"
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall4.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
@@ -193,7 +199,7 @@
                             </div>
                             <div class="carousel-item-img">
                                 <img
-                                    src="../../assets/images/Reservation-CG-Makeup.png"
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
@@ -210,7 +216,7 @@
                             </div>
                             <div class="carousel-item-img">
                                 <img
-                                    src="../../assets/images/Reservation-CG-Makeup.png"
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall2.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
@@ -227,7 +233,7 @@
                             </div>
                             <div class="carousel-item-img">
                                 <img
-                                    src="../../assets/images/Reservation-CG-Makeup.png"
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall3.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
@@ -244,7 +250,7 @@
                             </div>
                             <div class="carousel-item-img">
                                 <img
-                                    src="../../assets/images/Reservation-CG-Makeup.png"
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall4.jpg"
                                     alt="웨딩홀 이미지 5"
                                 />
                             </div>
@@ -257,7 +263,9 @@
                     </div>
                 </div>
                 <button class="carousel-button right" id="nextButton">
-                    <img src="../../assets/images/right.png" />
+                    <img
+                        src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/arrow/right-arrow.png"
+                    />
                 </button>
             </section>
         </div>
