feat : [FE] feature/WDR-19-FE/myPayment

--- a/html/LikeList/LikeList.html
+++ b/html/LikeList/LikeList.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LikeList</title>
-    <link rel="stylesheet" href="../../css/LikeList/LikeList.css" />
+    <link rel="stylesheet" href="../../css/likeList/likeList.css" />
     <link rel="stylesheet" href="../../css/common/reset.css" />
-    <script defer src="../../js/LikeList/LikeList.js"></script>
+    <script defer src="../../js/likeList/LikeList.js"></script>
     <script defer src="../../js/main/main.js"></script>
   </head>
+  <div id="header-placeholder"></div>
   <body>
-    <div id="header-placeholder"></div>
     <div class="hd__inner1100"></div>
 
     <!-- 1.헤더 설명 -->
@@ -167,4 +167,5 @@
     <!-- 4.페이지네이션 -->
     <section class="pagegination" id="LikeList-section4"></section>
   </body>
+  <div id="footer-placeholder"></div>
 </html>
