chore:[FE] fixed reset.css vertical-align: middle

--- a/html/myPayment/myPayment.html
+++ b/html/myPayment/myPayment.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myPayment</title>
     <link rel="stylesheet" href="../../css/myPayment/myPayment.css" />
-    <link rel="stylesheet" href="../../css/common/reset.css" />
 
     <script defer src="../../js/myPayment/myPayment.js"></script>
     <script defer src="../../js/main/main.js"></script>
@@ -49,9 +48,23 @@
                 <img src="../../assets/images/BestPackage1.png" alt="사진" />
               </td>
               <td>s스튜디오</td>
-              <td>[웨딩촬영] 앨범 20P+기본 액자(20R)</td>
+              <td>
+                <ul>
+                  [웨딩촬영] 앨범 20P+기본 액자(20R)
+                  <li>수정본 데이터</li>
+                  <li>들러리 촬영</li>
+                  <li>야간씬 촬영</li>
+                </ul>
+              </td>
               <td>진행중</td>
-              <td>선입금</td>
+              <td>
+                <ul>
+                  425,000원
+                  <li>165,000원</li>
+                  <li>150,000원</li>
+                  <li>110,000원</li>
+                </ul>
+              </td>
               <td>후입금</td>
             </tr>
             <tr>
@@ -69,7 +82,12 @@
                 <img src="../../assets/images/BestPackage1.png" alt="사진" />
               </td>
               <td>s스튜디오</td>
-              <td>[웨딩촬영] 앨범 20P+기본 액자(20R)</td>
+              <td>
+                <ul>
+                  [웨딩촬영] 앨범 20P+기본 액자(20R)
+                  <li>수정본 데이터</li>
+                </ul>
+              </td>
               <td>진행중</td>
               <td>선입금</td>
               <td>후입금</td>
