feat : [FE] new dropdown

--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -154,24 +154,12 @@
           </div>
           <div class="v1-line"></div>
           <div class="dropdown">
-            <button class="dropbtn">
-              <span class="dropbtn_content">스튜디오</span>
-              <img
-                src="../../assets/images/arrow_drop_down.png"
-                alt="미구현 드랍다운"
-              />
-            </button>
-            <div class="dropdown-content">
-              <div class="fastfood" onclick="showMenu(this.innerText)">
-                Burgerking
-              </div>
-              <div class="fastfood" onclick="showMenu(this.innerText)">
-                Mcdonals
-              </div>
-              <div class="fastfood" onclick="showMenu(this.innerText)">
-                Lotteria
-              </div>
-            </div>
+            <select name="brand" id="brand">
+              <option>업체 선택</option>
+              <option value="studio">스튜디오</option>
+              <option value="dress">드레스</option>
+              <option value="makeUp">메이크업</option>
+            </select>
           </div>
           <div class="table-divide">
             <div class="table">
