feat : [FE] 패키지 상세페이지 1차 완성

--- a/html/Package/packageDetails.html
+++ b/html/Package/packageDetails.html
@@ -1,18 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>package Details</title>
+    <link rel="stylesheet" href="../../css/package/packageDetails.css">
+    <script defer src="../../js/main/main.js"></script>
 </head>
 <body>
+    <div id="header-placeholder"></div>
     <div class="container">
-        <div class="up">
-
+        <div class="header">
+            <h1>간단하고 소박한 결혼식을 위한 최소한의 서비스</h1>
+            <h2>Simple Basic</h2>
         </div>
-        <div class="down">
-
+        <div class="service">
+            <img src="https://via.placeholder.com/150" alt="웨딩촬영">
+            <div class="description">
+                <h3>웨딩촬영</h3>
+                <p>앨범 1권 (20P) + 기본 액자 (20R)</p>
+                <P>3시간 촬영</P>
+                <P>총 4벌(드레스 3벌, 캐주얼 1벌)</P>
+                <P>오전/오후 각 1팀씩 촬영</P>
+            </div>
+            <div class="actions">
+                <a href="#">리뷰 보러가기</a>
+            </div>
+        </div>
+        <div class="service">
+            <img src="https://via.placeholder.com/150" alt="드레스">
+            <div class="description">
+                <h3>드레스</h3>
+                <p>촬영 드레스 3벌 + 본식 드레스 1벌</p>
+                <p>방문 상담 60분</p>
+                <p>가봉 60분 소요</p>
+            </div>
+            <div class="actions">
+                <a href="#">리뷰 보러가기</a>
+            </div>
+        </div>
+        <div class="service">
+            <img src="https://via.placeholder.com/150" alt="헤어&메이크업">
+            <div class="description">
+                <h3>헤어&메이크업</h3>
+                <p>촬영 1회 + 본식 1회 헤어 메이크업</p>
+                <p>메이크업 : 실장/헤어:상담 후 결정</p>
+            </div>
+            <div class="actions">
+                <a href="#">리뷰 보러가기</a>
+            </div>
+        </div>
+        <div class="totals">
+            <p>정상가: <span>4,180,000원</span></p>
+            <p class="discount">패키지 추가 할인: <span>1,715,000원</span></p>
+            <p>최종 혜택가: <span>1,515,000원</span></p>
+        </div>
+        <div class="discount-box">
+            <div class="saving">패키지 구매 시<br>총 2,665,000원 절약   </div>  
+            <p>선택 옵션 병경 시 패키지 혜택이 달라질 수 있습니다.</p>          
+        </div>
+        <div class="buttons">
+            <button class="back">뒤로 가기</button>
+            <button class="pay">패키지 결제하기</button>
         </div>
     </div>
+    <div id="footer-placeholder"></div>
 </body>
 </html>
